WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261484
[WebGPU] GPU process should not crash when shader fails to compile
https://bugs.webkit.org/show_bug.cgi?id=261484
Summary
[WebGPU] GPU process should not crash when shader fails to compile
Mike Wyrzykowski
Reported
2023-09-12 16:49:10 PDT
[WebGPU] GPU process should not crash when shader fails to compile
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-12 16:49:24 PDT
<
rdar://problem/115395840
>
Mike Wyrzykowski
Comment 2
2023-09-12 19:08:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/17719
EWS
Comment 3
2023-09-13 07:17:26 PDT
Committed
267947@main
(cc77505dc54c): <
https://commits.webkit.org/267947@main
> Reviewed commits have been landed. Closing PR #17719 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug