[WebGPU] GPU process should not crash when shader fails to compile https://bugs.webkit.org/show_bug.cgi?id=261484 <radar://115395840>

Reviewed by Dan Glastonbury.

Cleanup some invalid assertions and logic so we can open all
of the samples in a debug build without crashes or assertions triggering.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::Device::createBindGroup):
Bind group creation can fail if resources are not valid, don't assert.

* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::vertexBufferIndexForBindGroup const):
Allow passing a maximum vertex buffer count for ICB commands.

* Source/WebGPU/WebGPU/RenderBundleEncoder.h:
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::Device::createRenderBundleEncoder):
Settings inheritPipelineState to YES was wrong as setPipelineState
is called.

(WebGPU::RenderBundleEncoder::finish):
Ensure the pipeline state was set during ICB creation.

(WebGPU::RenderBundleEncoder::setBindGroup):
Use the max vertex buffer count instead of the default.

(WebGPU::RenderBundleEncoder::setPipeline):
Ensure the pipeline state is valid.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteDevice.cpp:
(WebKit::RemoteDevice::createBindGroup):
Bind group creation can fail if resources are not valid, don't assert.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemoteRenderPassEncoder.cpp:
(WebKit::RemoteRenderPassEncoder::setBindGroup):
Bind group creation can fail if resources are not valid, don't assert.

Canonical link: https://commits.webkit.org/267947@main